# libparams

./: .gitignore  .pylintrc  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  Makefile  README.md  flash.c  flash.h  flash_driver.c  libparams.cmake  sonar-project.properties  storage.c  storage.h
.github/workflows/: build.yml  check_crlf.yml  ci.yml  code_style.yml  sonarcloud.yml
Inc/: esc.h  main.h  sq_BMP280.h  sq_flash.h  sq_nmea.h  sq_pwm.h  uavcan.h
Src/: main.c  sq_BMP280.c  sq_MS4525DO.c  uavcan.c
devices/: esc.c  sq_HMC5883L.c  sq_HMC5883L.h  sq_MS4525DO.h  sq_nmea.c  sq_pwm.c
docs/: code_style.md  commit_conventions.md  embedded_firmware_contract.md
include/libparams/: _legacy_functions.h  flash_driver.h  libparams_error_codes.h  rom.h  storage.h
libparams/: YamlParamerers.hpp  YamlParameters.cpp  flash.c  flash.h  flash_driver.c  flash_driver.h  flash_stm32.c  flash_stm32.h  libparams_error_codes.h  rom.c  rom.h  storage.c  storage.h
libsqcan/: main.c  main.h  sq_flash.c  uavcan.c  uavcan.h
platform_specific/: README.md
platform_specific/stm32f103/: README.md  config.cmake  flash_driver.c  flash_driver.h  flash_info.h  flash_registers.h
platform_specific/stm32g0b1/: README.md  config.cmake  flash_driver.c  flash_driver.h  flash_info.h
platform_specific/stm32h753xx/: README.md  flash_driver.c
platform_specific/ubuntu/: FlashMemoryLayout.hpp  README.md  SimpleLogger.hpp  YamlParameters.cpp  YamlParameters.hpp  config.cmake  flash_driver.c  flash_driver.cpp  flash_driver.h  flash_info.h
scripts/: _constants.py  check_astyle.py  check_crlf.sh  color_logging.py  cppcheck.sh  generate_default_params.py  generate_docs.py  generate_params.py  generate_random_params.py  params.py  params_generate_array.py  params_generate_array_from_yaml.py
scripts/code_style/: astylerc  check_astyle.py  check_astyle.sh  check_crlf.py  cppcheck.sh  crlf.sh  get_pathes.sh  lint.sh
src/: flash.c  flash.h  flash_driver.c  flash_driver.h  rom.c  storage.c  storage.h
tests/: Makefile  baro.yaml  install_gtest.sh  mag.yaml  main.c  main.h  params.c  params.hpp  stm32f1xx_hal.c  stm32f1xx_hal.h  test_all.sh
tests/arm_build/: Makefile  main.c
tests/flash_driver_diagnostics/: libparams_flash_driver_diagnostic.cpp  libparams_flash_driver_diagnostic.hpp
tests/gtest/: Makefile  test_flash.cpp  test_stm32f1xx.cpp
tests/params/: params.c  params.hpp  temp_params_0.yaml
tests/params_generator/: CMakeLists.txt  test.cpp
tests/params_generator/c/: README.md  baro.yaml
tests/params_generator/cpp/: README.md  mag.yaml
tests/params_generator_c/: CMakeLists.txt  baro.yaml  mag.yaml  test.cpp  test.sh
tests/params_generator_cpp/: CMakeLists.txt  test.cpp  test.sh
tests/platform_specific/cmake/: arm-none-eabi-toolchain.cmake  stm32_platform_test.cmake
tests/platform_specific/stm32f103/: CMakeLists.txt  Makefile  README.md  application.c  main.c  main.h
tests/platform_specific/stm32g0b1/: CMakeLists.txt  Makefile  README.md  application.c  main.c  main.h
tests/platform_specific/ubuntu/: CMakeLists.txt  README.md  default_params.yaml  main.cpp  params.yaml
tests/stm32f103_build/: Makefile  application.c  main.c
tests/stm32f1_build/: Makefile
tests/stm32g0b1_build/: Makefile  application.c  main.c  main.h
tests/ubuntu/: Makefile  README.md  test_flash_driver.cpp  test_rom.cpp  test_storage.cpp
tests/unit_tests/: CMakeLists.txt  Makefile  README.md  test_flash_driver.cpp  test_redundant_storage.cpp  test_rom.cpp  test_storage.cpp  test_yaml_parameters.cpp
tests/unit_tests/common/: algorithms.hpp
